--- a/views/staff/manageCustOrder.handlebars
+++ b/views/staff/manageCustOrder.handlebars
@@ -35,7 +35,7 @@
                                 <form action="" method="POST">
                                     <div style="text-align: center;">
                                     <select style="margin: 10px;" name="status" id="status">
-                                <option value="Shipping">Shipping</option>
+                                <option value="Shipping">Unshipped</option>
                                 <option value="Deliverying">Deliverying</option>
                                 <option value="Delivered">Delivered</option>
                             </select>
