--- a/views/cart/purchase.handlebars
+++ b/views/cart/purchase.handlebars
@@ -50,7 +50,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="col-sm-6" style="float:left;">
-                    <a class="btn btn-secondary" href="../../product/catalogue">
+                    <input href="" class="btn btn-secondary" onclick="history.back()" value="Back">
                         <span class="fa-solid fa-circle-arrow-left"></span> BACK </a>
                 </div>
                 <div class="col-sm-6" style="float:right;">
