--- a/views/cart/purchase.handlebars
+++ b/views/cart/purchase.handlebars
@@ -21,8 +21,10 @@
             console.log("Sum of products: " + sum);
             var shipping = 12;
             var GST = parseFloat(sum) * 0.07
-            var voucher = parseFloat(sum) * 0.1
-            var afterGST = parseFloat(sum) + parseFloat(GST.toFixed(2)) + shipping - voucher;
+            {{!-- var voucher = parseFloat(sum) * 0.1 --}}
+            {{!-- var afterGST = parseFloat(sum) + parseFloat(GST.toFixed(2)) + shipping - voucher; --}}
+            var afterGST = parseFloat(sum) + parseFloat(GST.toFixed(2)) + shipping;
+
             document.getElementById("afterGST").innerHTML = "SG $" + afterGST;
             document.getElementById("gst").innerHTML = "SG $" + GST.toFixed(2);
             document.getElementById("totalamount").value = afterGST;
@@ -120,7 +122,7 @@
                 <hr size="12px" width="100%">
                 <div class="row">
                     <h5 class="col-sm-3" style="float: left;"><b>Voucher: </b></h5>
-                    <p class="col-sm-3" style="float: right;" id="voucher">10%</p>
+                    <p class="col-sm-3" style="float: right;" id="voucher"></p>
                 </div>
                 <hr size="12px" width="100%">
                 <div class="row">
