--- a/views/cart/purchase.handlebars
+++ b/views/cart/purchase.handlebars
@@ -50,7 +50,8 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="col-sm-6" style="float:left;">
-                    <input href="" class="btn btn-secondary fa-circle-arrow-left" onclick="history.back()" value="Back">
+                   <a class="btn btn-secondary" href="../../user/listOrder">
+                        <span class="fa-solid fa-circle-arrow-left"></span> BACK </a>
                 </div>
                 <div class="col-sm-6" style="float:right;">
                     <div class="dropdown">
